// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatMetadata should render Metadata component passing the formatted metadata 1`] = `
<Metadata
  compact={true}
  metadata={
    Array [
      "formated",
      "metadata",
    ]
  }
/>
`;

exports[`FormatMetadata should unshift additional metadata if passed 1`] = `
<Metadata
  compact={true}
  metadata={
    Array [
      "more",
      "data",
      "formated",
      "metadata",
    ]
  }
/>
`;
